Fix z-index conflict with color-box

--- a/app/assets/stylesheets/slide.css.scss
+++ b/app/assets/stylesheets/slide.css.scss
@@ -89,7 +89,7 @@ $progress-bar-width: 700px;
   bottom: 0;
   width: 100%;
   height: 100px;
-  z-index: 11000;
+  z-index: 1100;
 
   .slide_control_panel {
     margin: 5px 200px 5px 200px;
