--- a/app/assets/stylesheets/streaming.css.scss
+++ b/app/assets/stylesheets/streaming.css.scss
@@ -23,7 +23,7 @@
   position: absolute;
   height: 600px;
   top: 120px;
-  z-index: 10000;
+  z-index: 1000;
   left: 10px;
 }
 
